...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="ITEMS" id="4jA-GW-pbi">
                        <barButtonItem key="backBarButtonItem" title="ITEMS" id="B0T-TJ-nhq"/>
                        <barButtonItem key="rightBarButtonItem" image="Shopping-Cart.png" style="plain" id="8dF-uO-GgT">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Special Instructions?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhh-Py-yia">
                                <rect key="frame" x="161" y="315" width="159" height="22"/>
                                <animations/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="35"/>
                                <state key="normal" title="ADD TO ORDER">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="ORDER" id="ZMW-fM-FwE">
                        <barButtonItem key="rightBarButtonItem" title="Clear" id="QLd-st-GAa"/>
                    </navigationItem>
                    <connections>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="32"/>
                                <state key="normal" title="PAY LATER">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please Input Your Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="OnD-Xb-7Nh">
                                <rect key="frame" x="124" y="58" width="352" height="30"/>
                                <animations/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="- YOUR CONTACT -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJL-wm-Nc
                                <rect key="frame" x="124" y="0.0" width="352" height="31"/>
                                <animations/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please Input Your Phone Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ORt-1F-NAX"
                                <rect key="frame" x="124" y="147" width="352" height="30"/>
                                <animations/>
...
                                <animations/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="29"/>
                                <state key="normal" title="AM">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Thonburi-Bold" family="Thonburi" pointSize="28"/>
                                <state key="normal" title="SELECT YOUR ITEMS">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="26"/>
                                <state key="normal" title="PICK-UP" backgroundImage="trans.png">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="25"/>
                                <state key="normal" title="DELIVERY" backgroundImage="trans.png">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="35"/>
                                <state key="normal" title="LATER">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Order Options" id="evV-VM-5H8">
                        <barButtonItem key="backBarButtonItem" title="Options" id="aHo-W6-bOx"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="x1Z-8h-RpI">
                            <connections>
...
        <scene sceneID="IfL-xC-04c">
            <objects>
                <viewController id="nB0-Jc-zcT" userLabel="Info" customClass="InfoViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="DAa-7r-78B"/>
...
