...
                    </constraints>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="27"/>
                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <nil key="highlightedColor"/>
                    <size key="shadowOffset" width="0.0" height="0.0"/>
                </label>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="pJt-On-Q5Z">
                    <rect key="frame" x="92" y="106" width="486" height="45"/>
                    <animations/>
                    <constraints>
                        <constraint firstAttribute="height" constant="45" id="8UE-mV-yUL"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                    <connections>
                        <action selector="didEndOnExit:" destination="-1" eventType="editingDidEndOnExit" id="YU0-v2-3RE"/>
                    </connections>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Delivery Notes(Optional)" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GfX-CC-5Ix">
                    <rect key="frame" x="92" y="175" width="486" height="45"/>
                    <animations/>
                    <constraints>
                        <constraint firstAttribute="height" constant="45" id="v6o-2d-Coc"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                    <connections>
                        <action selector="didEndOnExit:" destination="-1" eventType="editingDidEndOnExit" id="3kf-1f-BYx"/>
                    </connections>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City/Town" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Bau-7R-Nhw">
                    <rect key="frame" x="92" y="244" width="248" height="45"/>
                    <animations/>
                    <constraints>
                        <constraint firstAttribute="width" constant="240" id="Kja-PZ-80o"/>
                        <constraint firstAttribute="height" constant="45" id="Yyt-qJ-UfO"/>
                    </constraints>
...
                        </mask>
                    </variation>
                    <connections>
                        <action selector="didEndOnExit:" destination="-1" eventType="editingDidEndOnExit" id="bRH-qU-5hA"/>
                    </connections>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="State" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="B9N-94-x2A">
                    <rect key="frame" x="390" y="244" width="188" height="45"/>
                    <animations/>
                    <constraints>
                        <constraint firstAttribute="width" constant="90" id="8Vf-Eh-3gz"/>
                        <constraint firstAttribute="height" constant="45" id="ZVh-56-BDg"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                    <connections>
                        <action selector="didEndOnExit:" destination="-1" eventType="editingDidEndOnExit" id="NcI-tz-64X"/>
                    </connections>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip Code" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="mar-z7-epB">
                    <rect key="frame" x="92" y="315" width="486" height="45"/>
                    <animations/>
                    <constraints>
                        <constraint firstAttribute="height" constant="45" id="QhM-8b-Hdv"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                    <color key="backgroundColor" red="0.1058823529" green="0.27058823529999998" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="120" id="cQZ-R8-sQ2"/>
                        <constraint firstAttribute="height" constant="55" id="eiE-Pw-8eb"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                    <state key="normal" title="DONE">
                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="tapDone:" destination="-1" eventType="touchUpInside" id="Aql-FC-aje"/>
                    </connections>
                </button>
...
                    <color key="backgroundColor" red="0.1058823529" green="0.27058823529999998" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="55" id="3t8-bl-wuN"/>
                        <constraint firstAttribute="width" constant="120" id="Ow1-OS-Rb5"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                    <state key="normal" title="CANCEL">
                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="tapCancel:" destination="-1" eventType="touchUpInside" id="7N7-HO-d03"/>
                    </connections>
                </button>
...
