...
    self.navigationController.navigationBar.barStyle = UIBarStyleBlackOpaque;
    
    self.MenuCategory = [[NSMutableArray alloc] init];
    self.expSection = [[NSMutableDictionary alloc] init];
    //Form the detail menu
    NSMutableDictionary *item1 = [[NSMutableDictionary alloc] init];
    [item1 setObject:@"Lassi" forKey:@"name"];
    [item1 setObject:@2.95 forKey:@"price"];
    NSMutableDictionary *item2 = [[NSMutableDictionary alloc] init];
    [item2 setObject:@"Mango Lassi" forKey:@"name"];
    [item2 setObject:@2.95 forKey:@"price"];
    NSMutableDictionary *item3 = [[NSMutableDictionary alloc] init];
    [item3 setObject:@"Juice" forKey:@"name"];
...
    [item5 setObject:@"Lemonade" forKey:@"name"];
    [item5 setObject:@2.00 forKey:@"price"];
    NSMutableDictionary *item6 = [[NSMutableDictionary alloc] init];
    [item6 setObject:@"Bottled Water" forKey:@"name"];
    [item6 setObject:@1.50 forKey:@"price"];
    NSArray *category1 = [[NSArray alloc] initWithObjects:item1,item2,item3,item4,item5,item6, nil];
    NSDictionary *dict1 = [[NSDictionary alloc] initWithObjectsAndKeys:@"BEVERAGES",@"categoryName", category1,@"items", nil];
    [self.MenuCategory addObject:dict1];
    [self.expSection setObject:@0 forKey:@0];
    
    NSMutableDictionary *item11 = [[NSMutableDictionary alloc] init];
    [item11 setObject:@"Bhel Puri" forKey:@"name"];
    [item11 setObject:@4.95 forKey:@"price"];
    NSMutableDictionary *item12 = [[NSMutableDictionary alloc] init];
    [item12 setObject:@"Chat Papri" forKey:@"name"];
    [item12 setObject:@4.95 forKey:@"price"];
    NSMutableDictionary *item13 = [[NSMutableDictionary alloc] init];
    [item13 setObject:@"Vegetable Samosa" forKey:@"name"];
...
    [item16 setObject:@"Paneer Pakora" forKey:@"name"];
    [item16 setObject:@6.95 forKey:@"price"];
    NSMutableDictionary *item17 = [[NSMutableDictionary alloc] init];
    [item17 setObject:@"Vegetarian Platter" forKey:@"name"];
    [item17 setObject:@7.95 forKey:@"price"];
    NSArray *category2 = [[NSArray alloc] initWithObjects:item11,item12,item13,item14,item15,item16,item17, nil];
    NSDictionary *dict2 = [[NSDictionary alloc] initWithObjectsAndKeys:@"VEGETARIAN APPETIZER",@"categoryName", category2,@"items", nil];
    [self.MenuCategory addObject:dict2];
    [self.expSection setObject:@0 forKey:@1];
    
    
    NSMutableDictionary *item21 = [[NSMutableDictionary alloc] init];
    [item21 setObject:@"Chicken Pakora" forKey:@"name"];
...
    NSArray *category6 = [[NSArray alloc] initWithObjects:item51,item52,item53,item54,item55,item56,item57,item58, nil];
    NSDictionary *dict6 = [[NSDictionary alloc] initWithObjectsAndKeys:@"CHICKEN",@"categoryName", category6,@"items", nil];
    [self.MenuCategory addObject:dict6];
    [self.expSection setObject:@0 forKey:@5];
    
    NSMutableDictionary *item61 = [[NSMutableDictionary alloc] init];
    [item61 setObject:@"Achari Lamb" forKey:@"name"];
    [item61 setObject:@12.95 forKey:@"price"];
    NSMutableDictionary *item62 = [[NSMutableDictionary alloc] init];
    [item62 setObject:@"Bhuna Lamb" forKey:@"name"];
    [item62 setObject:@12.95 forKey:@"price"];
    NSMutableDictionary *item63 = [[NSMutableDictionary alloc] init];
    [item63 setObject:@"Lamb Karahi" forKey:@"name"];
...
    [item65 setObject:@"Lamb Vindaloo" forKey:@"name"];
    [item65 setObject:@12.95 forKey:@"price"];
    NSMutableDictionary *item66 = [[NSMutableDictionary alloc] init];
    [item66 setObject:@"Saag Lamb" forKey:@"name"];
    [item66 setObject:@12.95 forKey:@"price"];
    NSArray *category7 = [[NSArray alloc] initWithObjects:item61,item62,item63,item64,item65,item66, nil];
    NSDictionary *dict7 = [[NSDictionary alloc] initWithObjectsAndKeys:@"LAMB",@"categoryName", category7,@"items", nil];
    [self.MenuCategory addObject:dict7];
    [self.expSection setObject:@0 forKey:@6];
    
    NSMutableDictionary *item71 = [[NSMutableDictionary alloc] init];
    [item71 setObject:@"Boti Kabab" forKey:@"name"];
    [item71 setObject:@15.95 forKey:@"price"];
...
