...
@implementation CartViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    self.navigationController.navigationBar.barStyle = UIBarStyleBlackOpaque;
    self.title = @"Your Order";
    self.taxRate = 0.06;//PA tax
    self.dbManager = [[DBManager alloc] initWithDatabaseFilename:@"ShoppingCart"];
    
    UIBarButtonItem *rightButton = [[UIBarButtonItem alloc] initWithTitle:@"Clear" style:UIBarButtonItemStylePlain target:self action:@selector(clearCart)];
    self.navigationItem.rightBarButtonItem = rightButton;
    
...
        self.checkOutBtn.alpha = 1;
        self.navigationItem.rightBarButtonItem.enabled = YES;
    }
}

-(void)clearCart{
    UIAlertController *alertController = [UIAlertController alertControllerWithTitle:@"Warning"
                                                                             message:@"It is going to clear the cart, are you sure?"
                                                                      preferredStyle:UIAlertControllerStyleAlert];
    //We add buttons to the alert controller by creating UIAlertActions:
    UIAlertAction *actionCancel = [UIAlertAction actionWithTitle:@"Cancel"
                                                           style:UIAlertActionStyleDefault
                                                         handler:nil];
    [alertController addAction:actionCancel];
    UIAlertAction *actionOk = [UIAlertAction actionWithTitle:@"Sure"
                                                       style:UIAlertActionStyleDefault
                                                     handler:^(UIAlertAction * action)
                               {
                                   [self clearConfirm];
                                   
                               }];
...
